Fixed page title not showing and changed 404 page

--- a/src/app/not-found/not-found.component.scss
+++ b/src/app/not-found/not-found.component.scss
@@ -1,10 +1,3 @@
-h1 {
-    color: #ff4b4b;
-    font-size: 75px;
-    font-weight: 700;
-    margin: 0;
-}
-
 #container {
     display: flex;
     flex-direction: column;
